added user roles user and admin. Remove user endpoint secured to only be usable for admin role
