# Backend/openapi-spec.yaml
@@ -66,6 +66,28 @@ paths:
                   $ref: '#/components/schemas/StorageOverview'
         '500':
           description: Server error
+  /storage:
+    post:
+      tags:
+        - Storage
+      operationId: addStorageForUser
+      description: Create new Storage for current user
+      parameters:
+        - name: storageName
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully added new storage
+          content:
+            application/json:
+              schema:
+                type: string
+        '500':
+          description: Server error
+
   /storage/{storageId}:
     get:
       tags:
@@ -90,6 +112,27 @@ paths:
           description: Server error
 
   # user controller
+  /user:
+    delete:
+      tags:
+        - User
+      operationId: removeUser
+      description: Remove user from system
+      parameters:
+        - name: email
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User successfully deleted
+          content:
+            application/json:
+              schema:
+                type: string
+        '500':
+          description: Server error
   /user/register:
     post:
       tags:
